<resources>
    <string name="app_name">btl</string>
    <string name="ip_config">192.168.1.14</string>
    <string name="port_gateway">9999</string>
    <string name="port_ai">9111</string>
    <string name="port_cart">9112</string>
    <string name="port_comment">9113</string>
    <string name="port_order">9114</string>
    <string name="port_payment">9115</string>
    <string name="port_product">9116</string>
    <string name="port_shipment">9117</string>
    <string name="port_user">9118</string>
    <string name="username">Henmendra</string>
    <string name="home">Home</string>
    <string name="vetify">Vetify Profile</string>
    <string name="profile">Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account_information">Account Information</string>
    <string name="password">Password</string>
    <string name="order">Order</string>
    <string name="my_cards">My Card</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_wishlist_fragment">Hello wishlist fragment</string>
    <string name="hello_order_fragment">Hello order fragment</string>
    <string name="title_activity_home_product">home_product</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>