<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuDarkMode"
        android:title="@string/dark_mode"
        android:icon="@drawable/ic_dark_mode">
    </item>
    <item android:id="@+id/menuAccountInformation"
        android:title="@string/account_information"
        android:icon="@drawable/ic_account_information">
    </item>
    <item android:id="@+id/menuPassword"
        android:title="@string/password"
        android:icon="@drawable/ic_password">
    </item>
    <item android:id="@+id/menuOrder"
        android:title="@string/order"
        android:icon="@drawable/ic_cart">
    </item>
    <item android:id="@+id/menuMyCards"
        android:title="@string/my_cards"
        android:icon="@drawable/ic_my_cards">
    </item>
    <item android:id="@+id/menuWishlist"
        android:title="@string/wishlist"
        android:icon="@drawable/ic_wishlist">
    </item>
    <item android:id="@+id/menuSettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings">
    </item>
</menu>